--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "@tonconnect/ui-react": "^2.0.9",
     "@twa-dev/sdk": "^7.10.1",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
+    "axios": "^1.7.7",
     "framer-motion": "^10.18.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "tonweb": "^0.0.66"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
