--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "tonweb": "^0.0.66"
   },
