--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@ton/core": "^0.59.0",
+    "@ton/crypto": "^3.3.0",
+    "@ton/ton": "^15.1.0",
     "@tonconnect/sdk": "^3.0.5",
     "@tonconnect/ui-react": "^2.0.9",
     "@twa-dev/sdk": "^7.10.1",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.7",
+    "buffer": "^6.0.3",
     "framer-motion": "^10.18.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
@@ -36,6 +40,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.0",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vite-tsconfig-paths": "^5.1.2"
   }
 }
