--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "axios": "^1.7.7",
     "buffer": "^6.0.3",
+    "crypto": "^1.0.1",
     "framer-motion": "^10.18.0",
     "next-themes": "^0.4.3",
     "react": "^18.2.0",
