--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
-    "tonweb": "^0.0.66"
+    "tonweb": "^0.0.66",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
