--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
-	"url": "https://bitgiftytg.vercel.app/",
+	"url": "https://bet9ja.bitgifty.com/",
 	"name": "Bet9ja TON TopUp",
 	"iconUrl": "./images/Bet9jaLogo.png",
-	"termsOfUseUrl": "https://bitgiftytg.vercel.app/",
-	"privacyPolicyUrl": "https://bitgiftytg.vercel.app/"
+	"termsOfUseUrl": "https://bet9ja.bitgifty.com/",
+	"privacyPolicyUrl": "https://bet9ja.bitgifty.com/"
 }
