--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,7 +1,7 @@
 {
 	"url": "https://bet9ja.bitgifty.com/",
 	"name": "Bet9ja TON TopUp",
-	"iconUrl": "./images/Bet9jaLogo.png",
+	"iconUrl": "https://cnt.bet9ja.com/cdn/wall-e/base/img/bet9ja-logo.svg",
 	"termsOfUseUrl": "https://bet9ja.bitgifty.com/",
 	"privacyPolicyUrl": "https://bet9ja.bitgifty.com/"
 }
